css/style.css
@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700;800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
/* Start General Styling */
:root {
	--text-color: #231f1e;
	--secondary-text-color: #838383;
	--lighter-text-color: #8b8b8b;
	--bg-color: #ffffff;
	--placeholder: #30303080;
	--primary: #e35aa0;
	--secondary: #e35aa026;
	--light-gray: #d9d9d9;
	--footer-color: #2a2a2a;
	--slider-dot: #231f1e59;
	--active-slider-dot: #3d2f2f;
}
* {
	margin: 0;
	padding: 0;
	box-sizing: border-box;
}
ul {
	margin: 0;
	padding: 0;
}
ul li {
	list-style: none;
}
h1,
h2,
h3,
h4,
h5,
p {
	margin: 0;
}
h1,
h2,
h3 {
	font-weight: 700;
}

p {
	color: var(--text-color);
}
a {
	text-decoration: none;
}
[lang='ar'],
[dir='rtl'] * {
	font-family: 'Almarai', sans-serif !important;
}
[lang='en'],
[dir='ltr'] * {
	font-family: 'Montserrat', sans-serif !important;
}
button[type='submit']:disabled {
	background-color: var(--light-gray);
}
.text-primary {
	color: var(--primary) !important;
}
.text-black {
	color: var(--text-color) !important;
}
.bg-secondary {
	background-color: var(--secondary) !important;
}
::placeholder {
	color: var(--placeholder);
}
img {
	object-fit: cover;
}
/* End General Styling */

/* Start Reusable styles */
.container-spacing {
	margin-bottom: 3rem;
}

.cursor-pointer {
	cursor: pointer;
}

.circular-button {
	padding: 6px 16px;
	border-width: 1px;
	border-style: solid;
	border-radius: 3.75rem;
	outline: none;
	font-size: 1.5rem;
	transition: all 0.2s linear;
}

.circular-button-primary {
	background-color: var(--primary);
	border-color: var(--primary);
	color: white;
	font-weight: 700;
	padding: 6px 32px;
}

.circular-button-primary:hover {
	background-color: transparent;
	border-color: white;
}

.circular-button-transparent {
	background-color: transparent;
	border-color: white;
	color: white;
}

.circular-button-transparent:hover {
	background-color: var(--primary);
	border-color: var(--primary);
}

.circular-button-black {
	background-color: var(--text-color);
	color: var(--bg-color);
	border-color: var(--text-color);
}

.circular-button-black:hover {
	background-color: var(--bg-color);
	color: var(--text-color);
	border-color: var(--text-color);
}

.dark {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
	height: 100%;
	background-color: black;
	opacity: 0.3;
	z-index: 1;
	border-radius: inherit;
}

.heading {
	text-align: center;
	margin-bottom: 2rem;
}
.heading h2 {
	color: var(--primary);
	font-size: 1rem;
	font-weight: 700;
}
.heading p {
	font-weight: 700;
	font-size: 2rem;
}
/* End Reusable styles */

/* Start Form Elements */
.form-container {
	width: 30%;
}

form .input-group {
	display: flex;
	flex-direction: column;
}
form label {
	user-select: none;
}
form .input-group label {
	font-weight: 700;
}
form .input-group input {
	padding: 1.3rem 1rem;
	border: 1px solid var(--light-gray);
	border-radius: 6px;
	outline: none;
}
form .input-group input::placeholder {
	padding: 1rem 0;
}
.styled-checkbox {
	border: 1px solid var(--light-gray);
	border-radius: 5px;
	width: 20px;
	height: 20px;
	display: flex;
	justify-content: center;
	padding: 3px;
	margin-bottom: 5px;
	align-items: center;
	cursor: pointer;
}
.styled-checkbox span {
	display: none;
}
.styled-checkbox.active {
	background-color: var(--primary);
}
.styled-checkbox.active span {
	display: block;
}
form button[type='submit'] {
	background-color: var(--primary);
	color: #ffffff;
	padding: 1.3rem 0;
	border-radius: 6px;
	border: none;
	font-weight: 700;
}
.divider-container p {
	background-color: var(--bg-color);
	color: var(--placeholder);
	z-index: 1;
	padding: 1rem 2rem;
}
.google-button {
	border: 1px solid #ebebeb;
	background-color: #f8f8f8;
	padding: 1.25rem 0;
	font-weight: 700;
	border-radius: 6px;
}
/* End Form Elements */

/* Start Login Page Styling */

.login-heading p {
	font-size: 1.2rem;
}

.image-container {
	width: 60%;
}

/* End Login Page Styling */

/* Start Navbar Styling */
.whatsapp-icon {
	position: fixed;
	left: 3rem;
	bottom: 2rem;
	background-color: #25d366;
	padding: 1rem;
	border-radius: 1rem;
	z-index: 3;
}

nav > div {
	padding: 1.5rem 7rem 1.5rem 6rem !important;
}

nav ul li a {
	text-decoration: none;
	color: var(--text-color);
	font-size: 1.25rem;
}

/* End Navbar Styling */

/* Start Home Page Styling */
.carousel-inner {
	height: 600px;
}
.carousel-inner .carousel-item {
	height: 100%;
}

.carousel-inner img {
	/* aspect-ratio: 2 / 1; */
	object-fit: cover;
	height: 100%;
}

.heading-title {
	font-size: 3.5rem;
}

.heading-sub-title {
	font-size: 1.5rem;
	width: 60%;
}

.carousel-indicators button {
	width: 8px !important;
	height: 8px !important;
	border-radius: 50%;
	position: relative;
	transition: all 0.3s linear;
}
.carousel-indicators button.active {
	position: relative;
	width: 42px !important;
	border-radius: 0px !important;
	transition: all 0.3s linear;
}
.carousel-indicators button.active::after,
.carousel-indicators button.active::before {
	content: '';
	width: 8px !important;
	height: 8px !important;
	border-radius: 50%;
	position: absolute;
	top: 0;
	background-color: inherit;
}

.carousel-indicators button.active::before {
	left: -3px;
}
.carousel-indicators button.active::after {
	right: -3px;
}
.services-container {
	display: grid;
	gap: 1.5rem;
	grid-template-columns: repeat(2, 1fr);
}

.service-card {
	border-radius: 1rem;
	position: relative;
	overflow: hidden;
	height: 232px;
}

.service-card img {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%, -50%);
	width: 100%;
	height: 100%;
	z-index: -1;
}
.service-card > div {
	padding: 2.5rem;
	color: white;
}
.service-card > div h3 {
	font-weight: 700;
	font-size: 1.5rem;
	margin-bottom: 1.5rem;
}
.products-container {
	display: grid;
	gap: 1.5rem;
	grid-template-columns: repeat(4, 1fr);
}
.products-container .product-card {
	display: flex;
	flex-direction: column;
	gap: 1rem;
}
.products-container .product-card .product-image {
	overflow: hidden;
	border-radius: 0.5rem;
}
.products-container .product-card .product-image img {
	width: 100%;
}
.products-container .product-card .product-details {
	display: flex;
	flex-direction: column;
	gap: 0.5rem;
}
.products-container .product-card .product-details p {
	font-size: 1.25rem;
}
.products-container .product-card .product-details div p {
	font-weight: 700;
}
.about-text {
	line-height: 35.71px;
}

.main-post-container {
	border-radius: 1.5rem;
}

.post-info {
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
	height: 100%;
	z-index: 1;
	background: linear-gradient(to top, rgba(0, 0, 0, 0.304), transparent);
	padding: 3rem;
	display: flex;
	align-items: flex-end;
}

.post-info div h3 {
	color: white;
	font-weight: 700;
	font-size: 2.25rem;
}
.post-info div p {
	color: white;
	font-size: 1.25rem;
	font-weight: bold;
}
.post-card div:last-child div h4 {
	font-weight: 700;
	font-size: 1.25rem;
}
.post-card div:last-child div:last-child > p {
	color: var(--secondary-text-color);
}

.post-card div:last-child div:last-child div {
	gap: 5rem;
}

.post-card div:last-child div:last-child div p {
	font-size: 0.875rem;
}

.post-card div:last-child div:last-child div p:first-child {
	color: var(--primary);
	font-weight: 700;
}
.post-card div:last-child div:last-child div p:last-child {
	color: var(--lighter-text-color);
}
footer {
	background-color: var(--footer-color);
}

footer > div > ul li {
	position: relative;
	padding: 0 1rem;
}
footer > div > ul li:last-child::before {
	content: '';
	position: absolute;
	right: 0;
	top: 50%;
	transform: translateY(-50%);
	width: 1px;
	height: 26px;
	background-color: var(--bg-color);
}
footer div:last-child ul li a {
	color: var(--bg-color);
}
footer div div:last-child ul li {
	position: relative;
	padding: 0 3rem;
}
footer div div:last-child ul li:not(:last-child)::before {
	content: '';
	position: absolute;
	left: 0;
	top: 50%;
	transform: translateY(-50%);
	width: 1px;
	height: 10px;
	background-color: var(--bg-color);
}
footer div div:last-child p {
	color: var(--bg-color);
	width: 60%;
	text-align: center;
	font-size: 0.875rem;
}
/* End Home Page Styling */

@media (min-width: 1400px) {
	.container-xxl {
		max-width: 1460px;
	}
}

@media (max-width: 1200px) {
	.form-container {
		width: 100%;
	}

	.image-container {
		display: none;
	}

	.login-heading p {
		font-size: 1rem;
	}
}

@media (max-width: 992px) {
	nav > div:not(.res-nav) {
		position: fixed;
		top: 0;
		right: 0;
		width: 100%;
		height: 100vh;
		background-color: var(--bg-color);
		z-index: 99;
		padding: 1.5rem 2rem !important;
		transform: translate(100%);
		transition: all 0.3s linear;
	}
	nav .res-nav {
		padding: 1.5rem 2rem !important;
	}
	nav > div.active {
		transform: translate(0%);
	}
	.heading-title {
		font-size: 2.5rem;
	}
	.heading-sub-title {
		font-size: 1.75rem;
		width: 80%;
	}

	.services-container {
		gap: 1rem;
	}
	.products-container {
		justify-items: center;
	}
	.products-container {
		grid-template-columns: repeat(2, 1fr);
	}
	/* .post-card div:last-child div:last-child div {
		gap: 1rem;
	} */
	.about-text {
		line-height: 26px;
	}
	.post-card > div:first-child {
		width: 50% !important;
	}
	.post-card div:first-child img {
		height: 100%;
	}
	.post-card > div:last-child {
		width: 50% !important;
	}
	footer div div:last-child ul li {
		position: relative;
		padding: 0 1rem;
	}
}

@media (max-width: 768px) {
	.whatsapp-icon {
		position: fixed;
		left: 1.5rem;
		bottom: 1.5rem;
	}
	.heading-title {
		font-size: 1rem;
	}
	.heading-sub-title {
		font-size: 0.75rem;
		width: 80%;
	}
	.carousel-inner {
		height: 250px;
	}
	.carousel-indicators {
		bottom: -45px;
	}
	.carousel-indicators button {
		background-color: var(--slider-dot) !important;
	}
	.carousel-indicators button.active {
		background-color: var(--active-slider-dot) !important;
	}

	.circular-button {
		font-size: 0.75rem;
	}
	.circular-button {
		padding: 6px 15px;
	}
	.heading h2 {
		font-size: 0.875rem;
	}
	.heading p {
		font-size: 1.25rem;
	}
	.service-card {
		height: unset;
	}
	.service-card > div {
		padding: 1.5rem;
	}

	.service-card > div h3 {
		font-size: 1rem;
	}
	.main-post-container {
		border-radius: 1rem;
	}
	.post-info {
		padding: 1rem;
	}
	.post-info div h3 {
		font-size: 1.25rem;
	}
	.post-info div p {
		font-size: 0.875rem;
	}
	footer div div:last-child p {
		width: 90%;
	}
}

@media (max-width: 576px) {
	.post-card div:last-child div h4,
	.post-card div:last-child div:last-child > p {
		font-size: 0.875rem;
	}
	footer > div > ul li {
		padding: 0 0.6rem;
	}
}

